[package]
name = "dissonance"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56.0", features = ["tcp", "dns", "tokio", "noise", "yamux", "macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }