[package]
name = "dissonance"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56.0", features = ["tcp", "dns", "tokio", "noise", "yamux", "macros", "ed25519", "websocket"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
dirs = "6.0.0"
anyhow = "1.0.99"
rand = "0.9.2"
ed25519-dalek = "2.2.0"
tempfile = "3.22.0"
